Updated config and README for Tomcat 6.0.35